--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"author": "Jane Doe",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
@@ -11,4 +12,5 @@
 		"type": "git",
 		"url": "https://idontknow/todo.git"
 	}
+	
 }
